// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add test script when there are no scripts 1`] = `
"{
  "scripts": {
    "test": "jest"
  }
}
"
`;

exports[`should add test script when there are scripts 1`] = `
"{
  "scripts": {
    "lint": "eslint .",
    "test": "jest"
  }
}
"
`;

exports[`should not add test script when { shouldModifyScripts: false } 1`] = `
"{}
"
`;

exports[`should remove jest config if exists 1`] = `
"{
  "scripts": {
    "test": "jest"
  }
}
"
`;
